# Canton-2PC-MPC

./: Cargo.toml  README.md
crates/canton-integration/: Cargo.toml
crates/canton-integration/src/: daml_types.rs  events.rs  ledger_api.rs  lib.rs  service.rs
crates/chains/bitcoin/: Cargo.toml
crates/chains/bitcoin/src/: address.rs  lib.rs  psbt.rs  signer.rs  transaction.rs
crates/chains/ethereum/: Cargo.toml
crates/chains/ethereum/src/: address.rs  erc20.rs  lib.rs  signer.rs  transaction.rs
crates/chains/solana/: Cargo.toml
crates/chains/solana/src/: address.rs  lib.rs  signer.rs  spl_token.rs  transaction.rs
crates/crypto-core/: Cargo.toml
crates/crypto-core/src/: ecdsa.rs  eddsa.rs  error.rs  hash.rs  lib.rs  schnorr.rs  traits.rs
crates/dwallet/: Cargo.toml
crates/dwallet/src/: chain_adapter.rs  lib.rs  manager.rs  wallet.rs
crates/mpc-protocol/: Cargo.toml
crates/mpc-protocol/src/: actor.rs  bus.rs  ceremony.rs  dkg.rs  error.rs  lib.rs  network.rs  participant.rs  protocol.rs  session.rs  signing.rs  types.rs
crates/mpc-protocol/tests/: local_ceremony.rs  multiparty_ceremony.rs
daml/: daml.yaml
daml/src/: DWallet.daml  Main.daml  Policy.daml  Transfer.daml
scripts/: test.sh
