[workspace]
resolver = "2"
members = [
    "crates/crypto-core",
    "crates/mpc-protocol",
    "crates/chains/bitcoin",
    "crates/chains/ethereum",
    "crates/chains/solana",
    "crates/dwallet",
    "crates/canton-integration",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/example/canton-2pc-mpc"
authors = ["Canton 2PC-MPC Contributors"]

[workspace.dependencies]
# Cryptographic primitives
k256 = { version = "0.13", features = ["ecdsa", "schnorr", "sha256"] }
p256 = { version = "0.13", features = ["ecdsa"] }
ed25519-dalek = { version = "2.1", features = ["rand_core", "batch"] }
curve25519-dalek = { version = "4.1", features = ["group"] }
sha2 = "0.10"
sha3 = "0.10"
hmac = "0.12"
hkdf = "0.12"
aes-gcm = "0.10"
rand = "0.8"
rand_core = "0.6"

# Threshold cryptography
frost-core = "2.0"
frost-ed25519 = "2.0"
frost-secp256k1 = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"
bs58 = "0.5"
bech32 = "0.11"

# Async runtime
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Networking
tonic = "0.11"
prost = "0.12"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Testing
proptest = "1.4"
criterion = "0.5"
