[workspace]
# resolver = "3" matches ika's workspace and is required for the v3 feature-
# unification rules that inkrypto's transitive dep graph assumes.
resolver = "3"
members = [
    "crates/mpc-protocol",
]
# NOTE: crates/crypto-core, crates/chains/*, crates/dwallet, and crates/canton-integration
# are intentionally excluded from the workspace for Phase 0. They depended on the placeholder
# MPC code and on k256 0.13 / crypto-bigint 0.5, which conflict with the inkrypto pins
# (k256 0.14.0-pre.11 / crypto-bigint 0.7.0-pre.9-fork). They will be ported back crate-by-crate
# in later phases as the real protocol is wired end-to-end.

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/example/canton-2pc-mpc"
authors = ["Canton 2PC-MPC Contributors"]

[workspace.dependencies]
# --- Ika / dwallet-labs inkrypto crates (research-only, CC-BY-NC-ND-4.0) ---
# Pinned to the rev that ika/mainnet-v1.1.8 uses.
mpc = { git = "https://github.com/dwallet-labs/inkrypto", rev = "abd7f010840eae9a26c211f2b12e8e4c4f103872" }
proof = { git = "https://github.com/dwallet-labs/inkrypto", rev = "abd7f010840eae9a26c211f2b12e8e4c4f103872" }
commitment = { git = "https://github.com/dwallet-labs/inkrypto", rev = "abd7f010840eae9a26c211f2b12e8e4c4f103872" }
group = { git = "https://github.com/dwallet-labs/inkrypto", rev = "abd7f010840eae9a26c211f2b12e8e4c4f103872" }
homomorphic_encryption = { git = "https://github.com/dwallet-labs/inkrypto", rev = "abd7f010840eae9a26c211f2b12e8e4c4f103872" }
class_groups = { git = "https://github.com/dwallet-labs/inkrypto", rev = "abd7f010840eae9a26c211f2b12e8e4c4f103872" }
maurer = { git = "https://github.com/dwallet-labs/inkrypto", rev = "abd7f010840eae9a26c211f2b12e8e4c4f103872" }
twopc_mpc = { git = "https://github.com/dwallet-labs/inkrypto", rev = "abd7f010840eae9a26c211f2b12e8e4c4f103872" }

# --- Pre-release crypto deps ---
# All pinned with `=` to inkrypto's Cargo.lock versions (rev abd7f010). Caret
# requirements would let Cargo pick newer pre-releases (e.g. crypto-bigint
# 0.7.3, primefield 0.14.0-pre.7) that have incompatible APIs — crypto-bigint
# in particular has `Choice` moved from subtle to ctutils between pre and rc
# milestones. Keep every line here in lock-step when bumping the inkrypto rev.
crypto-bigint = { version = "=0.7.0-rc.9", default-features = false, features = ["serde"] }
k256 = { version = "=0.14.0-pre.11", default-features = false, features = ["ecdsa", "arithmetic", "serde"] }
ecdsa = { version = "=0.17.0-rc.7" }
rand = { version = "=0.9.2", default-features = false }
rand_core = { version = "=0.9.3", default-features = false }
rand_chacha = { version = "=0.9.0", default-features = false }
sha2 = "=0.11.0-rc.2"
sha3 = "=0.11.0-rc.3"
digest = "=0.11.0-rc.3"
block-buffer = "=0.11.0-rc.5"
crypto-common = "=0.2.0-rc.4"
hybrid-array = "=0.4.5"
# More transitive pre-release pins taken from inkrypto/Cargo.lock — every one of
# these had a newer version on crates.io that is API-incompatible with the -rc
# family. Keep sorted for diffability when bumping the inkrypto rev.
der = "=0.8.0-rc.9"
elliptic-curve = "=0.14.0-rc.16"
ff = "=0.14.0-pre.0"
hmac = "=0.13.0-rc.2"
keccak = "=0.2.0-rc.0"
pkcs8 = "=0.11.0-rc.7"
primefield = "=0.14.0-pre.6"
primeorder = "=0.14.0-pre.9"
sec1 = "=0.8.0-rc.10"
signature = "=3.0.0-rc.4"
spki = "=0.8.0-rc.4"
crypto-primes = { version = "=0.7.0-pre.3", default-features = false }
hash2curve = "=0.14.0-rc.2"
curve25519-dalek = { version = "=5.0.0-pre.1", features = ["rand_core"] }
ed25519 = { version = "=3.0.0-rc.1", default-features = false }
ed25519-dalek = { version = "=3.0.0-pre.1", default-features = false }

# --- Misc ---
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

# --- Mandatory patches (match inkrypto/Cargo.toml and ika centralized-party) ---
[patch.crates-io]
crypto-bigint = { git = "https://github.com/ycscaly/crypto-bigint.git", rev = "8aabcee5" }
rfc6979 = { git = "https://github.com/RustCrypto/signatures", tag = "rfc6979/v0.5.0-rc.1" }
