[package]
name = "canton-integration"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Canton Network and Daml integration layer for 2PC-MPC"

[dependencies]
crypto-core = { path = "../crypto-core" }
mpc-protocol = { path = "../mpc-protocol" }
dwallet = { path = "../dwallet" }

# Serialization
serde.workspace = true
serde_json.workspace = true
hex = "0.4"

# Async
tokio.workspace = true
async-trait.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Random for UUIDs
rand.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
