[package]
name = "crypto-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core cryptographic primitives for Canton 2PC-MPC: ECDSA, EdDSA, Schnorr"

[dependencies]
# Elliptic curves
k256.workspace = true
p256.workspace = true
ed25519-dalek.workspace = true
curve25519-dalek.workspace = true

# Hashing
sha2.workspace = true
sha3.workspace = true
hmac.workspace = true
hkdf.workspace = true

# Encryption
aes-gcm.workspace = true

# Randomness
rand.workspace = true
rand_core.workspace = true

# Serialization
serde.workspace = true
hex.workspace = true

# Error handling
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
