[package]
name = "mpc-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "2PC-MPC protocol implementation for threshold signatures"

[dependencies]
crypto-core = { path = "../crypto-core" }

# Threshold cryptography (FROST)
frost-core.workspace = true
frost-ed25519.workspace = true
frost-secp256k1.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# Networking
tonic.workspace = true
prost.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true

# Randomness
rand.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
proptest.workspace = true

[build-dependencies]
tonic-build = "0.11"
