[package]
name = "mpc-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "2PC-MPC protocol implementation for threshold signatures"

[dependencies]
crypto-core = { path = "../crypto-core" }

# Async
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
hex = "0.4"
bs58.workspace = true

# Randomness
rand.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
