[package]
name = "chain-bitcoin"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bitcoin chain support for Canton 2PC-MPC (ECDSA/Schnorr)"

[dependencies]
crypto-core = { path = "../../crypto-core" }
mpc-protocol = { path = "../../mpc-protocol" }

# Bitcoin-specific
bitcoin = { version = "0.32", features = ["serde"] }
secp256k1 = { version = "0.29", features = ["global-context", "rand-std"] }

# Serialization
serde.workspace = true
hex.workspace = true
bech32.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
proptest.workspace = true
