[package]
name = "chain-bitcoin"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bitcoin chain support for Canton 2PC-MPC (ECDSA/Schnorr)"

[dependencies]
crypto-core = { path = "../../crypto-core" }

# Serialization
serde.workspace = true
hex.workspace = true
bs58.workspace = true
bech32.workspace = true

# Error handling
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
