[package]
name = "chain-ethereum"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ethereum/EVM chain support for Canton 2PC-MPC (ECDSA secp256k1)"

[dependencies]
crypto-core = { path = "../../crypto-core" }

# Serialization
serde.workspace = true
hex.workspace = true

# Error handling
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
