[package]
name = "chain-solana"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Solana chain support for Canton 2PC-MPC (EdDSA Ed25519)"

[dependencies]
crypto-core = { path = "../../crypto-core" }

# Ed25519
ed25519-dalek.workspace = true

# Serialization
serde.workspace = true
hex.workspace = true
bs58.workspace = true

# Error handling
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
